--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "^4.5.3",
+    "d3-scale": "^3.2.3",
+    "d3-scale-chromatic": "^2.0.0",
+    "inversify": "^5.0.1",
+    "inversify-binding-decorators": "^4.0.0",
+    "mobx": "~5.15.7",
+    "mobx-react": "~6.3.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.1.2",
     "react": "^17.0.0",
+    "react-bootstrap": "~1.0.1",
     "react-dom": "^17.0.0",
+    "react-grid-layout": "^1.1.1",
     "react-scripts": "3.4.4",
+    "recharts": "^1.8.5",
+    "reflect-metadata": "^0.1.13",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-scale": "^3.2.0",
+    "@types/d3-scale-chromatic": "^2.0.0",
+    "@types/react-grid-layout": "^1.1.1",
+    "@types/recharts": "^1.8.16"
   }
 }
